resources/vpc-network/igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "ashrafk-igw"
    provisioned_by = "Terraform"
  }
}
